css/main.css
/* ... */
/* Font style */
.montserrat {
  font-family: "Montserrat", Helvetica, sans-serif !important;
}

/* Degree area -------------------------------------------------------------------- */
#education {
  list-style-type: none;
  padding-left: 0;
}

#education li {
  margin-bottom: 1rem;
}

.university {
  color: gray;
}

/* Typography */
h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat", Helvetica, sans-serif;
  color: #20364c;
  font-weight: 500;
}

h1 {
  margin-bottom: 4rem;
}

h2, h3 {
  margin: 0 0 2rem !important;
  color: slategray;
}

h4 {
  text-transform: uppercase;
}

h4, h5, h6 {
  color: slategray !important;
}

.panel-heading h5 {
  font-style: italic;
  font-weight: 500;
  color: #1585cf !important;
}

#projects .panel-heading h5 {
  font-weight: 500;
  color: darkslategray !important;
}

p, table, tr, td, ul, li, blockquote, nav, a, footer, dl, dt, dd {
  font-size: 1.5rem;
  font-family: "Montserrat", Helvetica, sans-serif;
  font-weight: 400;
}

dt {
  font-weight: 600;
}

blockquote {
  border-left-color: slategray;
  color: slategray;
}

blockquote blockquote {
  border-left: none;
  margin: 1.5rem;
  font-style: italic;
}

cite {
  font-size: 1.5rem !important;
  display: block;
  margin-top: 1rem;
}

p {
  line-height: 1.5;
  margin-bottom: 1.5rem;
}

blockquote footer {
  margin-top: 1.5rem;
  margin-left: 2rem;
  text-indent: -1.8rem;
}

.publications {
  list-style-type: none;
  padding-left: 2.5rem;
}

.publications li {
  margin-left: 2rem;
  text-indent: -2.5rem;
  ;
}

/* Links */
#main-container a {
  color: #1585cf;
  font-weight: 500;
}

#main-container a:hover {
  color: #1585cf;
  border-bottom: 1px dashed #1585cf;
  text-decoration: none;
  padding-bottom: 2px;
}

/* Prevent link styles from bleeding into Bootstrap buttons */
#main-container a.btn,
#main-container a.btn:hover,
#main-container a.btn:focus,
#main-container a.btn:active {
  border-bottom: none;
  padding-bottom: 6px;
  text-decoration: none;
}

#main-container a.btn-primary,
#main-container a.btn-primary:hover,
#main-container a.btn-primary:focus {
  color: #fff;
}

#main-container a.btn-default,
#main-container a.btn-default:hover,
#main-container a.btn-default:focus {
  color: #333;
}

/* Contact info area, index.html page ------------------------------------------------- */
#title {
  color: #20364c;
  margin-top: 2rem;
  font-weight: 600;
  font-size: 1.4rem;
  text-align: center;
}

#program {
  color: gray;
  text-align: center;
}

iframe {
  padding: 3px;
  border: 1px solid lightgray;
}

/* Format the nav  ---------------------------------------------------------- */
nav {
  padding-top: 1rem;
  padding-bottom: 2rem;
}

.navbar-default .navbar-nav>li>a {
  color: #20364c;
  font-weight: 500;
}

.nav .montserrat:hover,
.nav .montserrat:focus-within,
.nav .montserrat:focus,
.navbar-inverse .navbar-nav>li>a:hover,
.navbar-inverse .navbar-nav>li>a:focus-within,
.navbar-inverse .navbar-nav>li>a:focus {
  background: white !important;
  border-radius: 1px;
  color: #20364c !important;
}

.navbar-default .navbar-nav>li>a:active {
  background: white !important;
}

.navbar-inverse .navbar-nav > li.active > a,
.navbar-inverse .navbar-nav > li.active > a:hover,
.navbar-inverse .navbar-nav > li.active > a:focus {
  background: white !important;
  color: #20364c !important;
  font-weight: 700;
  border-bottom: 3px solid #039BE5;
}

@media only screen and (min-width: 768px) {
  .navbar-default .navbar-nav>.open>a {
    background: white !important;
    border-right: 1px solid lightgray;
    border-top: 1px solid lightgray;
    border-left: 1px solid lightgray;
  }

  /* hover effects */
  /* Bubble Bottom */
  .hvr-bubble-bottom {
    display: inline-block;
    vertical-align: bottom;
    -webkit-transform: perspective(1px) translateZ(0);
    transform: perspective(1px) translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    position: relative;
  }

  .hvr-bubble-bottom:before {
    pointer-events: none;
    position: absolute;
    z-index: -1;
    content: '';
    border-style: solid;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    left: calc(50% - 10px);
    bottom: 0;
    border-width: 10px 10px 0 10px;
    border-color: white transparent transparent transparent;
  }

  .hvr-bubble-bottom:hover:before, .hvr-bubble-bottom:focus:before, .hvr-bubble-bottom:active:before {
    -webkit-transform: translateY(10px);
    transform: translateY(10px);
  }
}

@media (max-width: 767px) {
  .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
    color: darkslategray !important;
  }
}

.navbar-inverse {
  background: #20364c;
}

#dark-mode-toggle {
  margin-top: 8px;
  vertical-align: middle;
}

.navbar-brand {
  font-size: 2.15rem !important;
  font-weight: 500;
  color: white !important;
}

/* Navbar link size */
.navbar-default .navbar-nav>li>a {
  font-size: 1.5rem !important;
}

.navbar-inverse .navbar-nav>li>a {
  color: white;
}

.navbar {
  border-radius: 0;
}

.active {
  /* background: white; */
  border-radius: 2px;
}

.navbar .dropdown-menu {
  margin-right: -1px;
}

/* Utility classes for positioning content ----------------------------------- */
.padding-left-1 {
  padding-left: 1rem !important;
}

.padding-left-2 {
  padding-left: 2rem !important;
}

.push-down-1 {
  margin-top: 1rem !important;
}

.push-down-2 {
  margin-top: 2rem !important;
}

.push-down-3 {
  margin-top: 3rem !important;
}

.push-down-4 {
  margin-top: 4rem !important;
}

.pull-up-1 {
  margin-top: -1rem !important;
}

.pull-up-2 {
  margin-top: -1rem !important;
}

.pull-up-3 {
  margin-top: -1rem !important;
}

.spacer-div-3 {
  height: 45px !important;
}

#link-to-docs,
#link-to-teaching-philosophy {
  color: #1585cf;
}
/* ... */

